2016-10-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Only atempt to read regular files into NSData,
	* Source/NSMessagePortNameServer.m: Ignore lock directories in the
	'names' directory.
	* Source/NSTask.m Increase files to close from 256 to 2048 to better
	reflect typical modern system limits.
	All changes for problems spotted by Wolfgang.

2016-10-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSDate.h: Add documentation
	* Source/NSDate.m: Tidy up and remove a little redundant code.
	* Source/NSRunLoop.m: Tidy up and empty autorelease pool more often.
	* Source/NSTimer.m: Tidy a little and improvde -description

2016-10-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GSTLS.h:
	* Source/GSTLS.m:
	Fix for double free issues when assigning certificat/key to
	credentials fails.

2016-10-12  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSRegularExpression.m: Fix crashes in libicu due to
        * ignored error codes. Also fix a few memory leaks.
	* Tests/base/NSRegularExpression/basic.m: Test cases for this.

2016-10-11  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSTLS.m
	* configure.ac
	* Headers/GNUstepBase/config.h.in:
	Check for gnutls_x509_privkey_import2() and use it if
	available.
	* configure: Regenerate
	* Tests/base/GSTLS:
	Test case for loading an OpenSSL encrypted private key.

2016-10-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Check for modification of source file
	during copy.

2016-10-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: Permit noncharacter unicode codepoints
	* Source/GSString.m: Permit noncharacter unicode codepoints
	* Source/NSNotificationQueue.m: Call GSPrivateCheckTasks()
	* Source/NSRunLoop.m: Let GSPrivateNotifyASAP() check for task exit.

2016-09-19  Niels Grewe <niels.grewe@halbordnung.de>>

	* Source/Additions/GSMime.m (charsetForXml):
	Fix detection of charset in XML document.